syntax = "proto3";

package user;

service UserService {
  rpc Register(CreateUser) returns (User);
}

message User {
  string id = 1;
  uint64 createdAt = 2;
  uint64 updatedAt = 3;
  optional uint64 deletedAt = 4;
  string username = 5;
}

message CreateUser {
  string username = 1;
  string password = 2;
}